src/test/data/highlighting/unknown_type.tz
parameter string;
return string;
storage <error descr="Unknown type 'units'">units</error>;
code {};
